Bug 125454 - Math does not respect system theme
Summary: Math does not respect system theme
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Jan-Marek Glogowski
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: UI-Theming
  Show dependency treegraph
 
Reported: 2019-05-23 07:59 UTC by Heiko Tietze
Modified: 2019-05-28 04:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot old/new (73.93 KB, image/png)
2019-05-23 07:59 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2019-05-23 07:59:28 UTC
Created attachment 151612 [details]
Screenshot old/new

Math uses hard-coded colors, which makes it unreadable with, for example, dark backgrounds. The screenshot shows 6.1 left-hand and 6.3 with Jmux' patch using Breeze Dark as Gtk3 theme on LXQt.
Comment 1 Jan-Marek Glogowski 2019-05-23 08:46:40 UTC
Patch is https://gerrit.libreoffice.org/#/c/72795/

You can't see the different mouse-over focus rectangles in the screenshots.

BTW: with current master from today (= at least commit 73f8222109c3091d5119ed47eac5cad4a55b2212), you'll get real focus and key navigation. This was long broken and is handled in bug 65587.

I found the non-filled rectangle more readable then the filled, highlighted one; YMMV. Getting the focus into the ElementsControl is a bit harder, because a click moves focus to the editor. Just select the combo box and tab into it.
Comment 2 Jan-Marek Glogowski 2019-05-24 23:52:46 UTC
So next week is Beta1 of 6.3. Do you know someone additional, who might comment on this? Otherwise I'll merge this to get it into the beta.
Comment 3 Heiko Tietze 2019-05-25 07:58:56 UTC
Don't see a reason that this could be a failure. So +2 for merging.
Comment 4 Commit Notification 2019-05-28 04:07:55 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/67fd47e909aa88584420c3351ab17308aeb4e911%5E%21

tdf#125454 SM use theming for element list

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.